# cinematic-controlnet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  PERFORMANCE.md  README.md  SECURITY.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conditioning/: __init__.py  cinematic_controls.py  flow_conditioner.py  multi_shot_consistency.py
diffusion/: __init__.py  distilled_sampler.py  hunyuan_adapter.py  wan2_adapter.py
docs/: api.rst  conf.py  index.rst
examples/: benchmark_solver.py  example_notebook.ipynb  run_inference.py
inference/: benchmark.py  realtime_pipeline.py
physics/: __init__.py  flow_generator.py  force_tokenizer.py  neural_continuum_solver.py  rgb_renderer.py
scripts/: download_weights.py  profile.py
tests/: __init__.py  test_environment.py  test_integration.py  test_module_shapes.py  test_physics_accuracy.py
training/: train_conditioner.py  train_physics_solver.py
